--- a/saved-lyrics.html
+++ b/saved-lyrics.html
@@ -163,7 +163,7 @@
 
 <div class="lyric-entry" style="position:relative;">
   <div class="row">
-    <span class="file-name">🎶 We-Build-Together.mp3</span>
+    <span class="file-name">🎶 We-Build-Together</span>
 
     <!-- right-side: date + menu -->
     <div style="margin-left:auto; display:flex; align-items:center; gap:.5rem; position:relative;">
@@ -192,7 +192,7 @@
 <!-- 1) wentforgold.midi — 7 Sep 2025 -->
 <div class="lyric-entry">
   <div class="row">
-    <span class="file-name">🎼 wentforgold.midi</span>
+    <span class="file-name">🎼 wentforgold</span>
 
     <div style="margin-left:auto; display:flex; align-items:center; gap:.75rem; flex-wrap:wrap;">
       <span class="chat-date">Saved: 7 Sep 2025</span>
@@ -208,7 +208,7 @@
 <!-- 2) mysterymuse.MP3 — 22 Aug 2025 -->
 <div class="lyric-entry">
   <div class="row">
-    <span class="file-name">🎶 mysterymuse.MP3</span>
+    <span class="file-name">🎶 mysterymuse</span>
 
     <div style="margin-left:auto; display:flex; align-items:center; gap:.75rem; flex-wrap:wrap;">
       <span class="chat-date">Saved: 22 Aug 2025</span>
@@ -224,7 +224,7 @@
 <!-- 3) demo-neverknowuntilyoutry.wav — 15 Aug 2025 -->
 <div class="lyric-entry">
   <div class="row">
-    <span class="file-name">🎵 demo-neverknowuntilyoutry.wav</span>
+    <span class="file-name">🎵 demo-neverknowuntilyoutry</span>
 
     <div style="margin-left:auto; display:flex; align-items:center; gap:.75rem; flex-wrap:wrap;">
       <span class="chat-date">Saved: 15 Aug 2025</span>
