--- a/profile.html
+++ b/profile.html
@@ -143,7 +143,7 @@
       <a href="edit-score.html" title="Music Score Editor"><img src="icons/score.png" alt="Music Score Editor" class="icon" /></a>
       <a href="saved-chats.html"><img src="icons/chat.png" alt="Chat" class="icon" /></a>
       <a href="saved-lyrics.html"><img src="icons/lyrics.png" alt="Lyrics" class="icon" /></a>
-      <a href="Download-UI.html"><img src="icons/download.png" alt="Download" class="icon" /></a>
+      <a href="download-ui.html"><img src="icons/download.png" alt="Download" class="icon" /></a>
       <div style="margin: 12px 0;">...</div>
       <button id="theme-toggle" title="Toggle Light/Dark Mode">🌗</button>
     </div>
